[package]
edition = "2021"
name = "discord-chat"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 外部库
axum = {version = "0.5.12", features = ["headers", "http2", "json", "headers", "tower-log", "ws"]}
chrono = "0.4.19"
jsonwebtoken = {version = "^8"}
lapin = "2.1.1"
prost = {version = "0.10.4"}
redis = "0.17.0"
sea-orm = {version = "^0.8", features = ["runtime-tokio-native-tls", "sqlx-postgres", "debug-print"]}
serde = {version = "1.0.138", features = ["derive"]}
serde_json = "1.0.82"
thiserror = {version = "1.0.23"}
tokio = {version = "1.0", features = ["full"]}
tonic = {version = "0.7.2"}
tower-http = {version = "0.3.0", features = ["cors"]}
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
[build-dependencies]
tonic-build = {version = "0.7.2"}
